@startuml

title __LOGININTERFACE's Class Diagram__\n

  namespace com.example {
    namespace logininterface {
      class com.example.logininterface.MainActivity {
          ~ btnCreareCont : Button
          ~ butonLogare : Button
          ~ email : EditText
          ~ fAuth : FirebaseAuth
          ~ forgotPassword : TextView
          ~ parolaUtilizator : EditText
          {static} - TAG : String
          # onCreate()
      }
    }
  }
  

  namespace com.example {
    namespace logininterface {
      class com.example.logininterface.Register {
          ~ adresa : EditText
          ~ butonCreare : Button
          ~ dataNasterii : EditText
          ~ email : EditText
          ~ fAuth : FirebaseAuth
          ~ fStore : FirebaseFirestore
          ~ nume : EditText
          ~ parolaUtilizator : EditText
          ~ prenume : EditText
          ~ telefon : EditText
          ~ userID : String
          # onCreate()
      }
    }
  }
  

  namespace com.example {
    namespace logininterface {
      class com.example.logininterface.ResetPassword {
          ~ fAuth : FirebaseAuth
          - btnResetareParola : Button
          - emailEditText : EditText
          # onCreate()
          - resetPassword()
      }
    }
  }
  

  com.example.logininterface.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.logininterface.Register -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.logininterface.ResetPassword -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
